--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html2pdf.js": "^0.10.2",
     "inngest": "^3.29.3",
     "lucide-react": "^0.471.1",
+    "marked": "^15.0.7",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
